syntax = "proto3";

package agent.v1;

option go_package = "github.com/clustercost/backend/proto/agent/v1";

service AgentService {
  rpc Report(stream ReportRequest) returns (ReportResponse);
}

message ReportRequest {
  string cluster_id = 1;
  string cluster_name = 2;
  string node_name = 3;
  string availability_zone = 4;
  string agent_id = 5;
  Snapshot snapshot = 6;
}

message ReportResponse {
  bool accepted = 1;
}

message Snapshot {
  repeated PodMetric pods = 1;
  // Nodes, Namespaces, Deployments metadata if you need them for enrichment
}

message PodMetric {
  string namespace = 1;
  string pod = 2;
  map<string, string> labels = 3;
  
  CpuMetrics cpu_metrics = 4;
  MemoryMetrics memory_metrics = 5;
  NetworkMetrics network_metrics = 6;
  StorageMetrics storage_metrics = 7;
}

message CpuMetrics {
  uint64 usage_user_ns = 1;
  uint64 usage_kernel_ns = 2;
  uint64 throttling_ns = 3;
}

message MemoryMetrics {
  uint64 rss_bytes = 1;
  uint64 page_faults = 2;
}

message NetworkMetrics {
  uint64 bytes_sent = 1;
  uint64 bytes_recv = 2;
  uint64 egress_public_bytes = 3;   // $$$ High Cost
  uint64 egress_cross_az_bytes = 4; // $$ Medium Cost
  uint64 egress_internal_bytes = 5; // $ Low/Free
}

message StorageMetrics {
  uint64 read_bytes = 1;
  uint64 write_bytes = 2;
  uint64 read_ops = 3;
  uint64 write_ops = 4;
}